# nist-terminology-dataset

./: README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
notebooks/: app_output_exploration.ipynb  nist_glossary_data.ipynb
src/: config.py  create_kaggle_metadata.py  data_analysis.py  data_downloader.py  data_preprocessing.py  main.py
