[tool.poetry]
name = "nist-terminology-dataset"
version = "0.1.1"
description = "Project that creates a kaggle dataset from nist glossary terms."
authors = ["Ron Mallory <ronnymallory@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"
types-requests = "^2.31.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
